Correcting z-index and restructuring in sliders (#27)

--- a/src/components/custom/Slider/SliderHeader/SliderHeader.scss
+++ b/src/components/custom/Slider/SliderHeader/SliderHeader.scss
@@ -5,7 +5,6 @@
 .slider-header {
     @include flex-space-bw-center;
     padding: 0 var(--padding-x);
-    z-index: $z-index--level-1;
 
     &__title {
         @include font-style($font-primary, $font-size--h6, $color--primary, $font-weight--regular);
@@ -21,7 +20,6 @@
         height: 2px;
         border-radius: 1px;
         background-color: $grey-200;
-        cursor: pointer;
 
         &--active {
             background-color: $white-300;
